# clvm_rs

./: .gitignore  .prettierrc  Cargo.toml  Criterion.toml  README.md  RELEASE.md  benchmarks.txt  build.rs  clvm_js.d.ts  clvm_js.js  clvm_js_bg.js  clvm_js_bg.wasm  clvm_js_bg.wasm.d.ts  elm.json  index.html  index.js  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  serde-summary.md  test-bls-ops.txt  test-core-ops.txt  test-more-ops.txt  webpack.config.js
.github/: dependabot.yml  wrappython
.github/linters/: .flake8
.github/workflows/: arm64-on-ubuntu.yml  audit-check.yaml  benchmark.yml  build-arm64-wheels.yml  build-crate-and-npm.yml  build-crate.yml  build-m1-wheel.yml  build-npm.yml  build-test-ARM64.yml  build-test.yml  build-windows.yml  build.yml  check-test-generation.yml  codeql.yaml  codeql.yml  coverage.yml  dependency-review.yml  linter.yml  main.yml  prettier.yml  rust-clippy.yml
benches/: 0.generator  1.generator  2.generator  3.generator  4.generator  5.generator  deserialize.rs  deserialize_2026.rs  intern.rs  run-program.rs  serialize.rs  serialize_2026.rs  sha256_hash.rs
benchmark/: 1509a62d.clvm  1509a62d.env  1c8103a4.clvm  1c8103a4.env  1f228c2e.clvm  1f228c2e.env  255822f7.clvm  255822f7.env  4f57efb0.clvm  4f57efb0.env  54fd91bb.clvm  54fd91bb.env  7312527a.clvm  7312527a.env  73d19fac.clvm  73d19fac.env  8900023e.clvm  8900023e.env  8d4b1459.clvm  8d4b1459.env  90c890db.clvm  90c890db.env  a24336b6.clvm  a24336b6.env  b8c8e6d5.clvm  b8c8e6d5.env  block-2000.hex  c38a49ea.clvm  c38a49ea.env  ca4b27bc.clvm  ca4b27bc.env  cmp.py  compressed-2000.envhex  compressed-2000.hex  concat.clvm  concat.env  concat.hex  count-even.clvm  count-even.hex  d20e7d20.clvm  (+39 more)
cl/: deserialize_w_backrefs.cl
clvm-fuzzing/: Cargo.toml  benchmark-clvm-fuzzer.py
clvm-fuzzing/src/: args.rs  fuzzing_utils.rs  lib.rs  make_tree.rs  node_eq.rs  serialized_len.rs
docs/: compressed-serialization.md  implementation-notes.md  new-operator-checklist.md  serde-2026.md  sha256tree.md
fuzz/: Cargo.toml  decode.py  gen_corpus.py
fuzz/coverage/serde-2026/raw/: default-serde-2026.profraw
fuzz/fuzz_targets/: allocator.rs  arithmetic.rs  base64.rs  canonical_serialization.rs  canonical_serialization_br.rs  deserialize.rs  deserialize_br.rs  deserialize_br_rand_tree.rs  deserialize_br_test_pair_count.rs  divmod.rs  fuzzing_utils.rs  garbage_collection.rs  incremental_serializer.rs  intern.rs  keccak.rs  make_tree.rs  modpow.rs  node_eq.rs  object_cache.rs  operators.rs  parse_triples.rs  pick_node.rs  run_program.rs  serde_2026.rs  serde_2026_panic.rs  serde_2026_varint.rs  serialized_len.rs  serialized_length.rs  serialized_length_trusted.rs  serializer.rs  serializer_cmp.rs  tree_cache.rs  tree_hash.rs
grrs/: Cargo.toml
grrs/src/: main.rs
op-tests/: test-base64url-generated.txt  test-base64url.txt  test-bls-ops.txt  test-bls-zk.txt  test-blspy-g1.txt  test-blspy-g2.txt  test-blspy-hash.txt  test-blspy-pairing.txt  test-blspy-verify.txt  test-core-ops.txt  test-keccak256-generated.txt  test-keccak256.txt  test-modpow.txt  test-more-ops.txt  test-secp-verify.txt  test-secp256k1.txt  test-secp256r1.txt  test-sha256.txt  test-sha256tree-hash.txt  test-sha256tree.txt
py/: Cargo.toml  README.md
py/src/: api.rs  int_to_bytes.rs  lazy_node.rs  lib.rs  run_generator.rs  run_program.rs
src/: Bus.elm  Main.elm  Model.elm  View.elm  allocator.rs  api.rs  arc_allocator.rs  base64_ops.rs  bls_ops.rs  bytes32.rs  chia_dialect.rs  chia_dialect_factory.rs  collect_dialect.rs  compressor.rs  core_ops.rs  cost.rs  deserialize_tree.rs  dialect.rs  err_utils.rs  error.rs  f_table.rs  from_node_ptr.rs  gmp_ffi.rs  int_allocator.rs  int_to_bytes.rs  keccak256_ops.rs  lazy_node.rs  lib.rs  limits.rs  more_ops.rs  mpir_msvc.rs  native_op_lookup.rs  new_node.rs  node.rs  number.rs  number_gmp.rs  number_traits.rs  object_cache.rs  op_lookup_hash.rs  op_utils.rs  (+20 more)
src/Model/: Types.elm
src/cmds/: main.rs  swbr.rs
src/py/: adapt_response.rs  api.rs  arc_allocator.rs  arena.rs  arena_object.rs  bridge_cache.rs  clvm_object.rs  dialect.rs  error_bridge.rs  f_table.rs  gateway.rs  glue.rs  int_allocator_gateway.rs  lazy_node.rs  mod.rs  native_clvm_object.rs  native_op.rs  native_op_lookup.rs  native_view.rs  node.rs  op_fn.rs  py_arena.rs  py_int_allocator.rs  py_int_node.rs  py_na_node.rs  py_native_mapping.rs  py_node.rs  py_view.rs  run_chia_program.rs  run_generator.rs  run_program.rs  runtime_dialect.rs  to_py_node.rs
src/py1/: mod.rs
src/serde/: bitset.rs  bytes32.rs  de.rs  de_br.rs  de_tree.rs  errors.rs  identity_hash.rs  incremental.rs  intern.rs  mod.rs  object_cache.rs  parse_atom.rs  path_builder.rs  read_cache_lookup.rs  ser.rs  ser_br.rs  serialize.rs  serialized_length.rs  test.rs  test_intern.rs  tools.rs  tree_cache.rs  (+3 more)
tests/: generate-programs.py  run-programs.py  run.py  run_gen.py  test-generators.py
tests/zksnark/: Cargo.toml
tools/: Cargo.toml  generate-bls-tests.py  generate-keccak-tests.py  generate-modpow-tests.py  generate-secp256k1-tests.py  generate-secp256r1-tests.py  generate-sha256-tests.py  generate-sha256tree-tests.py  serde_summary.py
tools/data/: proof.json  public.json  verification_key.json
wasm/: Cargo.toml  README.md
wasm/src/: api.rs  flags.rs  lazy_node.rs  lib.rs  run_program.rs  serialize.rs
wasm/tests/: index.js
wheel/: Cargo.toml  README.md  pyproject.toml
wheel/python/benchmarks/: deserialization.py
wheel/python/clvm_rs/: __init__.py  at.py  base.py  bytes32.py  casts.py  chia_dialect.py  clvm_rs.pyi  clvm_storage.py  clvm_tree.py  curry.py  curry_and_treehash.py  de.py  deser.py  eval_error.py  keywords.py  program.py  replace.py  run_program.py  ser.py  serde.py  serialize.py  tree_hash.py  uncurry.py
wheel/python/tests/: as_python_test.py  serialize_test.py  test_apis.py  test_as_python.py  test_curry_and_treehash.py  test_program.py  test_serialize.py  test_to_program.py  to_sexp_test.py
wheel/src/: adapt_response.rs  api.rs  lazy_node.rs  lib.rs  mod.rs  run_generator.rs  run_program.rs
(+84 files in other folders)
