[package]
name = "clvm-fuzzing"
version = "0.16.3"
edition = "2024"
license = "Apache-2.0"
description = "Fuzzing tools for clvm Projects on Rust"
authors = ["Jack Nelson <j.nelson@chia.net>"]
homepage = "https://github.com/Chia-Network/clvm_rs"
repository = "https://github.com/Chia-Network/clvm_rs"


[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
clvmr = { workspace = true }
chia-sha2 = { workspace = true }
anyhow = { workspace = true }

