[package]
name = "clvm_rs-fuzz"
version = "1.0.0"
authors = ["Arvid Norberg <arvid@chia.net>"]
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.6"

[dependencies.clvmr]
path = ".."
default-features = false

[[bin]]
name = "fuzz_run_program"
path = "fuzz_targets/run_program.rs"
test = false
doc = false

[[bin]]
name = "fuzz_serialized_length"
path = "fuzz_targets/serialized_length.rs"
test = false
doc = false

[[bin]]
name = "fuzz_serialized_length_trusted"
path = "fuzz_targets/serialized_length_trusted.rs"
test = false
doc = false

[[bin]]
name = "fuzz_deserialize"
path = "fuzz_targets/deserialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz_deserialize_br"
path = "fuzz_targets/deserialize_br.rs"
test = false
doc = false

[[bin]]
name = "fuzz_tree_hash"
path = "fuzz_targets/tree_hash.rs"
test = false
doc = false

[[bin]]
name = "fuzz_deserialize_br_rand_tree"
path = "fuzz_targets/deserialize_br_rand_tree.rs"
test = false
doc = false

[[bin]]
name = "fuzz_parse_triples"
path = "fuzz_targets/parse_triples.rs"
test = false
doc = false

[[bin]]
name = "operators"
path = "fuzz_targets/operators.rs"
test = false
doc = false

[[bin]]
name = "allocator"
path = "fuzz_targets/allocator.rs"
test = false
doc = false

[[bin]]
name = "keccak"
path = "fuzz_targets/keccak.rs"
test = false
doc = false
