[package]
name = "clvm_rs_wheel"
version = "0.0.2"
authors = ["Richard Kiss <him@richardkiss.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Implementation of `clvm` for Chia coin"
homepage = "https://github.com/Chia-Network/clvm_rs/"
repository = "https://github.com/Chia-Network/clvm_rs/"
readme = "README.md"

[lib]
name = "clvm_rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["extension-module"]
extension-module = ["pyo3", "pyo3/extension-module"]

[dependencies]
clvm_rs = { path = ".." }
pyo3 = { version = "0.14.1", optional = true }
