[package]
name = "clvm-rs-test-tools"
version = "0.2.0"
authors = ["Arvid Norberg <arvid@chia.net>", "Cameron Cooper <cameron@chia.net>"]
edition = "2021"
license = "Apache-2.0"
description = "Developer tools for the CLVM interpreter"
homepage = "https://github.com/Chia-Network/clvm_rs/tools/"
repository = "https://github.com/Chia-Network/clvm_rs/tools/"
readme = "README.md"

[dependencies]
hex-literal = "0.4.1"
hex = "0.4.3"
rand = "0.8.5"
sha1 = "0.10.6"
linreg = "0.2.0"
clvmr = { path = ".." }
chia-bls = "0.10.0"
num-bigint = "0.4.6"
num-integer = "0.1.46"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
clap = { version = "4.5.9", features = ["derive"] }
rand_chacha = "0.3.1"

[[bin]]
name = "generate-fuzz-corpus"
test = false
bench = false

[[bin]]
name = "benchmark-clvm-cost"
test = false
bench = false

[[bin]]
name = "verify-zksnark"
test = false
bench = false

[[bin]]
name = "generate-modpow-tests"
test = false
bench = false
