[package]
name = "clvm-rs-test-tools"
version = "0.17.0"
authors = ["Arvid Norberg <arvid@chia.net>", "Cameron Cooper <cameron@chia.net>"]
edition = "2024"
license = "Apache-2.0"
description = "Developer tools for the CLVM interpreter"
homepage = "https://github.com/Chia-Network/clvm_rs/tools/"
repository = "https://github.com/Chia-Network/clvm_rs/tools/"
readme = "README.md"
publish = false

[dependencies]
hex-literal = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
sha1 = { workspace = true }
linreg = { workspace = true }
clvmr = { workspace = true }
chia-bls = { workspace = true }
num-bigint = { workspace = true }
num-integer = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
rand_chacha = { workspace = true }

[[bin]]
name = "generate-fuzz-corpus"
test = false
bench = false

[[bin]]
name = "benchmark-clvm-cost"
test = false
bench = false

[[bin]]
name = "verify-zksnark"
test = false
bench = false

[[bin]]
name = "generate-modpow-tests"
test = false
bench = false

[[bin]]
name = "generate-stress-tests"
test = false
bench = false
