[package]
name = "clvm_wasm"
version = "0.2.6"
authors = ["Richard Kiss <him@richardkiss.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Implementation of `clvm` for Chia Network's cryptocurrency"
homepage = "https://github.com/Chia-Network/clvm_rs/"
repository = "https://github.com/Chia-Network/clvm_rs/"
readme = "README.md"

[lib]
name = "clvm_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
clvmr = { path = "..", features = [] }
wasm-bindgen = "=0.2.87"
wasm-bindgen-test = "=0.3.34"
js-sys = "0.3.61"
