[package]
name = "clvm_wasm"
version = "0.14.0"
authors = ["Richard Kiss <him@richardkiss.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Implementation of `clvm` for Chia Network's cryptocurrency"
homepage = "https://github.com/Chia-Network/clvm_rs/"
repository = "https://github.com/Chia-Network/clvm_rs/"
readme = "README.md"

[lib]
name = "clvm_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
clvmr = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-test = { workspace = true }
js-sys = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
