[package]
name = "clvm_rs"
version = "0.8.0"
authors = ["Richard Kiss <him@richardkiss.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Implementation of `clvm` for Chia Network's cryptocurrency"
homepage = "https://github.com/Chia-Network/clvm_rs/"
repository = "https://github.com/Chia-Network/clvm_rs/"
readme = "README.md"

[lib]
name = "clvm_rs"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
clvmr = { path = ".." }
pyo3 = { version = "0.21.2", features = ["abi3-py38", "extension-module"] }

[features]
openssl = ["clvmr/openssl"]
